--- a/index.html
+++ b/index.html
@@ -6,49 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Tourism Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;300;400;500&family=Barlow:wght@300;400&family=Bellefair&display=swap" rel="stylesheet">
-
-<link rel="stylesheet" href="style.css">
-<!-- <link rel="favicon" href="./resources/favicon-32x32.png" type="image/x-icon"> -->
-<link rel="fav icon" href="./resources/assets/favicon-32x32.png" type="image/x-icon">
-<script src="./script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;300;400;500&family=Barlow:wght@300;400&family=Bellefair&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="fav icon" href="./resources/assets/favicon-32x32.png" type="image/x-icon">
+    <script src="./script.js" defer></script>
 </head>
-<body>
+<body class="">
     <nav>
         <div class="logoDiv">
             <img src="./resources/assets/shared/logo.svg" alt="">
         </div>
         <div class="lineDiv"><hr></div>
         <div class="navDiv">
-            <div class="inNavDiv" id="inNavDiv">
+            <div class="inNavDiv" id="inNavDivMain">
                 <div class="navDivItem homeTag" id="homeTag">
                     <div class="linkDiv" tabindex="0">
                         <div class="countDiv">00</div>
-                        <div class="textDiv" id="homeTag">HOME</div>
+                        <div class="textDiv">HOME</div>
                     </div>
                     <div class="under undHome"></div>
                 </div>
                 <div class="navDivItem destTag" id="destTag">
                     <div class="linkDiv" tabindex="0">
                         <div class="countDiv">01</div>
-                        <div class="textDiv" id="destTag">DESTINATION</div>
+                        <div class="textDiv">DESTINATION</div>
                     </div>
                     <div class="under undDest"></div>
                 </div>
-                <div class="navDivItem crewTag">
+                <div class="navDivItem crewTag" id="crewTag">
                     <div class="linkDiv" tabindex="0">
                         <div class="countDiv">02</div>
-                        <div class="textDiv" id="crewTag">CREW</div>
+                        <div class="textDiv">CREW</div>
                     </div>
                     <div class="under undCrew"></div>
                 </div>
-                <div class="navDivItem techTag">
+                <div class="navDivItem techTag" id="techTag">
                     <div class="linkDiv" tabindex="0">
                         <div class="countDiv">03</div>
-                        <div class="textDiv" id="techTag">TECHNOLOGY</div>
+                        <div class="textDiv">TECHNOLOGY</div>
                     </div>
                     <div class="under undTech"></div>
                 </div>
@@ -56,7 +54,7 @@
         </div>
     </nav>
     <main>
-        <div class="homeTab dFlex" id="homeTab">
+        <div class="contentDiv home dFlex" id="homeTab">
             <div class="spaceDiv">
                 <h5>
                     SO, YOU WANT TO TRAVEL TO
@@ -75,38 +73,257 @@
                 <!-- <div class="exp" tabindex="0">EXPLORE</div> -->
             </div>
         </div>
-        <div class="destTab hidden" id="destTab">
-            <div class="leftDiv">
+        <div class="contentDiv hidden" id="destTab">
+            <div class="leftDiv" id="destImgDiv">
                 <div class="heading" style="color: white;height: 15vh;">
                     <div class="countDiv">01</div>
                     <div class="text">PICK YOUR DESTINATION</div>
                 </div>
-                <img src="./resources/assets/destination/image-moon.png" alt="" class="">
-                <img src="./resources/assets/destination/image-mars.png" alt="" class="hidden">
-                <img src="./resources/assets/destination/image-europa.png" alt="" class="hidden">
-                <img src="./resources/assets/destination/image-titan.png" alt="" class="hidden">
+                <div class="destsImg" id="destsImg">
+                    <img src="./resources/assets/destination/image-moon.png" alt="" class="" id="moonImg">
+                    <img src="./resources/assets/destination/image-mars.png" alt="" class="hidden" id="marsImg">
+                    <img src="./resources/assets/destination/image-europa.png" alt="" class="hidden" id="europaImg">
+                    <img src="./resources/assets/destination/image-titan.png" alt="" class="hidden" id="titanImg">
+                </div>
             </div>
             <div class="rightDiv">
+                <div class="destContDiv">
+                    <div class="inNavDiv" id="inNavDivDest">
+                        <div class="navDivItem moonTag" id="moonTag">
+                            <div class="linkDiv" tabindex="0">
+                                <div class="textDiv">MOON</div>
+                            </div>
+                            <div class="under undHome"></div>
+                        </div>
+                        <div class="navDivItem marsTag" id="marsTag">
+                            <div class="linkDiv" tabindex="0">
+                                <div class="textDiv">MARS</div>
+                            </div>
+                            <div class="under undDest"></div>
+                        </div>
+                        <div class="navDivItem europaTag" id="europaTag">
+                            <div class="linkDiv" tabindex="0">
+                                <div class="textDiv">EUROPA</div>
+                            </div>
+                            <div class="under undCrew"></div>
+                        </div>
+                        <div class="navDivItem titanTag" id="titanTag">
+                            <div class="linkDiv" tabindex="0">
+                                <div class="textDiv">TITAN</div>
+                            </div>
+                            <div class="under undTech"></div>
+                        </div>
+                    </div>
+                    <div class="destsDiv" id="destsDiv">
+                        <div class="destDescDiv" id="moonDiv">  
+                            <div class="destName">
+                                MOON
+                            </div>
+                            <div class="destDesc">
+                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                            </div>
+                            <div class="dataDiv">
+                                <div class="distDiv">
+                                    <div class="text">AVG. DISTANCE</div>
+                                    <div class="val">384,400 KM</div>
+                                </div>
+                                <div class="timeDiv">
+                                    <div class="text">EST. TRAVEL TIME</div>
+                                    <div class="val">3 DAYS</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="destDescDiv hidden" id="marsDiv">  
+                            <div class="destName">
+                                MARS
+                            </div>
+                            <div class="destDesc">
+                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                            </div>
+                            <div class="dataDiv">
+                                <div class="distDiv">
+                                    <div class="text">AVG. DISTANCE</div>
+                                    <div class="val">225 MIL. KM</div>
+                                </div>
+                                <div class="timeDiv">
+                                    <div class="text">EST. TRAVEL TIME</div>
+                                    <div class="val">9 MONTHS</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="destDescDiv hidden" id="europaDiv">  
+                            <div class="destName">
+                                EUROPA
+                            </div>
+                            <div class="destDesc">
+                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                            </div>
+                            <div class="dataDiv">
+                                <div class="distDiv">
+                                    <div class="text">AVG. DISTANCE</div>
+                                    <div class="val">628 MIL. KM</div>
+                                </div>
+                                <div class="timeDiv">
+                                    <div class="text">EST. TRAVEL TIME</div>
+                                    <div class="val">3 YEARS</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="destDescDiv hidden" id="titanDiv">  
+                            <div class="destName">
+                                TITAN
+                            </div>
+                            <div class="destDesc">
+                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                            </div>
+                            <div class="dataDiv">
+                                <div class="distDiv">
+                                    <div class="text">AVG. DISTANCE</div>
+                                    <div class="val">1.6 BIL. KM</div>
+                                </div>
+                                <div class="timeDiv">
+                                    <div class="text">EST. TRAVEL TIME</div>
+                                    <div class="val">7 YEARS</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="crewTab hidden" id="crewTab">
-            <div class="leftDiv">
+        <div class="contentDiv hidden" id="crewTab">
+            <div class="leftDiv crew">
                 <div class="heading" style="color: white;height: 15vh;">
                     <div class="countDiv">02</div>
-                    <div class="text">PICK YOUR DESTINATION</div>
+                    <div class="text">MEET YOUR CREW</div>
+                </div>
+                <div class="crewsDiv" id="crewsDiv">
+                    <div class="crewDescDiv" id="dougDiv">  
+                        <div class="crewRole">
+                            COMMANDER
+                        </div>
+                        <div class="crewName">
+                            DOUGLAS HURLEY
+                        </div>
+                        <div class="crewDesc">
+                            <p>
+                                Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="crewDescDiv hidden" id="markDiv">  
+                        <div class="crewRole">
+                            MISSION SPECIALIST
+                        </div>
+                        <div class="crewName">
+                            MARK SHUTTLEWORTH
+                        </div>
+                        <div class="crewDesc">
+                            <p>
+                                Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind the Linux-based Ubuntu operating system. Shuttleworth became the first South African to travel to space as a space tourist.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="crewDescDiv hidden" id="victDiv">  
+                        <div class="crewRole">
+                            PILOT
+                        </div>
+                        <div class="crewName">
+                            VICTOR GLOVER
+                        </div>
+                        <div class="crewDesc">
+                            <p>
+                                Pilot on the first operational flight of the SpaceX Crew Dragon to the International Space Station. Glover is a commander in the U.S. Navy where he pilots an F/A-18.He was a crew member of Expedition 64, and served as a station systems flight engineer.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="crewDescDiv hidden" id="anouDiv">  
+                        <div class="crewRole">
+                            FLIGHT ENGINEER
+                        </div>
+                        <div class="crewName">
+                            ANOUSHEH ANSARI
+                        </div>
+                        <div class="crewDesc">
+                            <p>
+                                Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. Ansari was the fourth self-funded space tourist, the first self-funded woman to fly to the ISS, and the first Iranian in space.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="inNavDiv crew" id="inNavDivCrew">
+                    <div class="radio" tabindex="0"></div>
+                    <div class="radio" tabindex="0"></div>
+                    <div class="radio" tabindex="0"></div>
+                    <div class="radio" tabindex="0"></div>
                 </div>
             </div>
-            <div class="rightDiv">
+            <div class="rightDiv crew">
+                <div class="crewImg" id="crewImg">
+                    <img src="./resources/assets/crew/image-douglas-hurley.png" alt="" class="" id="moonImg">
+                    <img src="./resources/assets/crew/image-mark-shuttleworth.png" alt="" class="hidden" id="marsImg">
+                    <img src="./resources/assets/crew/image-victor-glover.png" alt="" class="hidden" id="europaImg">
+                    <img src="./resources/assets/crew/image-anousheh-ansari.png" alt="" class="hidden" id="titanImg">
+                </div>
             </div>
         </div>
-        <div class="techTab hidden" id="techTab">
-            <div class="leftDiv">
+        <div class="contentDiv hidden" id="techTab">
+            <div class="leftDiv tech">
                 <div class="heading" style="color: white;height: 15vh;">
                     <div class="countDiv">03</div>
-                    <div class="text">PICK YOUR DESTINATION</div>
+                    <div class="text">SPACE LAUNCH 101</div>
+                </div>
+                <div class="techDiv" id="techDiv">
+                    <div class="inNavDiv tech" id="inNavDivTech">
+                        <div class="radio" tabindex="0">1</div>
+                        <div class="radio" tabindex="0">2</div>
+                        <div class="radio" tabindex="0">3</div>
+                    </div>
+                    <div class="techsDiv" id="techsDiv">
+                        <div class="techDescDiv" id="vehiDiv">  
+                            <div class="techHead">
+                                THE TERMINOLOGY...
+                            </div>
+                            <div class="techName">
+                                LAUNCH VEHICLE
+                            </div>
+                            <div class="techDesc">
+                                A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
+                            </div>
+                        </div>
+                        <div class="techDescDiv hidden" id="portDiv">  
+                            <div class="techHead">
+                                THE TERMINOLOGY...
+                            </div>
+                            <div class="techName">
+                                SPACEPORT
+                            </div>
+                            <div class="techDesc">
+                                A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.
+                            </div>
+                        </div>
+                        <div class="techDescDiv hidden" id="capsDiv">  
+                            <div class="techHead">
+                                THE TERMINOLOGY...
+                            </div>
+                            <div class="techName">
+                                SPACE CAPSULE
+                            </div>
+                            <div class="techDesc">
+                                <p>
+                                    A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="rightDiv">
+            <div class="rightDiv tech">
+                <div class="techsImg" id="techsImg">
+                    <img src="./resources/assets/technology/image-launch-vehicle-portrait.jpg" class="">
+                    <img src="./resources/assets/technology/image-spaceport-portrait.jpg" class="hidden">
+                    <img src="./resources/assets/technology/image-space-capsule-portrait.jpg" class="hidden">
+                </div>
             </div>
         </div>
     </main>
