desktop version complete

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="lineDiv"><hr></div>
         <div class="navDiv">
             <div class="inNavDiv" id="inNavDivMain">
-                <div class="navDivItem homeTag" id="homeTag">
+                <div class="navDivItem homeTag selected" id="homeTag">
                     <div class="linkDiv" tabindex="0">
                         <div class="countDiv">00</div>
                         <div class="textDiv">HOME</div>
@@ -68,7 +68,7 @@
             </div>
             <div class="expDiv">
                 <div class="expHalo" tabindex="0">
-                    <div class="exp">EXPLORE</div>
+                    <div class="exp" id="exp">EXPLORE</div>
                 </div>
                 <!-- <div class="exp" tabindex="0">EXPLORE</div> -->
             </div>
@@ -89,7 +89,7 @@
             <div class="rightDiv">
                 <div class="destContDiv">
                     <div class="inNavDiv" id="inNavDivDest">
-                        <div class="navDivItem moonTag" id="moonTag">
+                        <div class="navDivItem moonTag selected" id="moonTag">
                             <div class="linkDiv" tabindex="0">
                                 <div class="textDiv">MOON</div>
                             </div>
@@ -138,7 +138,7 @@
                                 MARS
                             </div>
                             <div class="destDesc">
-                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                                Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!
                             </div>
                             <div class="dataDiv">
                                 <div class="distDiv">
@@ -156,7 +156,7 @@
                                 EUROPA
                             </div>
                             <div class="destDesc">
-                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                                The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.
                             </div>
                             <div class="dataDiv">
                                 <div class="distDiv">
@@ -174,7 +174,7 @@
                                 TITAN
                             </div>
                             <div class="destDesc">
-                                See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+                                The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.
                             </div>
                             <div class="dataDiv">
                                 <div class="distDiv">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="inNavDiv crew" id="inNavDivCrew">
-                    <div class="radio" tabindex="0"></div>
+                    <div class="radio selected" tabindex="0"></div>
                     <div class="radio" tabindex="0"></div>
                     <div class="radio" tabindex="0"></div>
                     <div class="radio" tabindex="0"></div>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="techDiv" id="techDiv">
                     <div class="inNavDiv tech" id="inNavDivTech">
-                        <div class="radio" tabindex="0">1</div>
+                        <div class="radio selected" tabindex="0">1</div>
                         <div class="radio" tabindex="0">2</div>
                         <div class="radio" tabindex="0">3</div>
                     </div>
@@ -310,9 +310,7 @@
                                 SPACE CAPSULE
                             </div>
                             <div class="techDesc">
-                                <p>
                                     A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.
-                                </p>
                             </div>
                         </div>
                     </div>
